2009-03-26
Made all the modules add() functions handle the ID for modifying in the same order as the handle() function

2009-03-25
New clause added to the top of plugins that require at least 1 file to be selected
	They now search the request when all possible fields that would return a result are empty
Added centralized ID database
Fixed modules not updating their files because db_file module always changes the date before other modules get to it
	Modules now return true if the file is added by the handle() method, 1 if the file modified, or false if the file is skipped
	There are a few exceptions, the db_watch_list module returns true by default and false if there are still files to scan
	
2009-03-24 (14,000+ lines of code)
Created a GLOBAL['database'] because it is not at all state dependant, and there is no reason to pass it to a bunch of different functions
Worked on db_amazon module
Created tokenizing function to take strings and parse out useless stuff

2009-03-23
Made cleanup faster by only checking for removed/non-existent files when the directory changes in the db_watch_list module
	Non-standard modules are still responsible for doing cleanup
Removed the cleanup_remove function since it is no longer needed
	Standard removing will remove files INSIDE of directories, to minize broken paths, this will remove files inside files like the db_archive and db_disk image by default as well

2009-03-20
Made a $GLOBALS['watched'] and $GLOBALS['ignored'] to minimize the amount of watch queries, this is not used everywhere

2009-03-12
Found out changing the Filepath and TEXT fields to BLOB didn't help the filepath checking of ascii names

2009-03-11
Changed db_file::cleanup() to use LEFT and LOCATE instead of REGEXP
Made masive progress on reports.php admin script
Fixed unicode problem by changing the TEXT columns in the database to BLOB, now binary text is preserved

2009-03-10
Fixed some searching and sorting problems in the db_files module