@@ -80,7 +80,7 @@ items[{$files[file].id}] = {if $item_selected}true{else}false{/if};
 </head>
 <body>
 {if isset($smarty.get.cat)}
-<form action="{$smarty.server.PHP_SELF}" method="get">
+<form action="{$smarty.server.PHP_SELF|htmlspecialchars}" method="get">
 <input type="text" value="{$smarty.request.search}" name="search" style="font-size:16px; font-family:Arial, Helvetica, sans-serif; font-weight:bold;" /><input type="submit" value="Search" style="font-weight:bold; font-size:16px; font-family:Arial, Helvetica, sans-serif;" />
 </form>
 <a href="javascript:go_link();" class="big" style="float:left; clear:none; display:inline;">Save</a>
